# promptkit

./: .env.example  .envrc.example  .gitignore  AGENTS.md  INTEGRATION_TEST_SUMMARY.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
docs/: product_requirements.md  technical_design.md
docs/references/: claude-code-directory-spec.md  claude-marketplace-spec.md  cursor-directory-spec.md  platform-directory-spec.md
openspec/changes/claude-marketplace-fetcher/: design.md  proposal.md  tasks.md
openspec/changes/commit-build-artifacts/: design.md  proposal.md  tasks.md
openspec/changes/git-clone-fetcher/: design.md  tasks.md
openspec/changes/implement-lock-command/: design.md  proposal.md
openspec/changes/implement-sync-command/: tasks.md
openspec/specs/build-artifacts/: spec.md
openspec/specs/claude-builder/: spec.md
openspec/specs/claude-marketplace-fetcher/: spec.md
source/promptkit/: __init__.py  cli.py
tests/: conftest.py  test_cli.py  test_smoke.py
tests/app/: test_build.py  test_clean.py  test_init.py  test_lock.py  test_validate.py
tests/domain/: test_errors.py  test_lock_entry.py  test_platform_config.py  test_platform_target.py  test_plugin.py  test_project_config.py  test_prompt.py  test_prompt_metadata.py  test_prompt_spec.py  test_registry.py  test_validation.py
tests/infra/: test_config_serializer.py
tests/integration/: README.md  __init__.py  conftest.py  test_build_e2e.py  test_init_e2e.py  test_lock_with_real_registry.py  test_sync_e2e.py  test_validate_e2e.py
(+105 files in other folders)
