[project]
name = "promptkit"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "typer",
    "pydantic-settings",
    "pyyaml",
    "httpx",
]

[project.scripts]
promptkit = "promptkit.cli:app"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "pyright",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration tests that may use external resources",
    "network: tests that require network access",
]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["source/promptkit"]
